[gd_scene load_steps=5 format=3 uid="uid://bgljegb77eo52"]

[ext_resource type="Texture2D" uid="uid://btqph4ave5npt" path="res://assets/sprites/hover-effect-1.png" id="1_74mo0"]
[ext_resource type="Script" path="res://scripts/level_panel.gd" id="1_f8jrh"]
[ext_resource type="Theme" uid="uid://ba8w7uwv0in7s" path="res://assets/standard.tres" id="1_u7k57"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_siw5t"]
size = Vector2(45, 54)

[node name="LevelPanel" type="Area2D"]
script = ExtResource("1_f8jrh")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_siw5t")

[node name="Background" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_74mo0")

[node name="Title" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_u7k57")
text = "p"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
